--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="container disable">
-        <h2>AWErsOME Image Editor</h2>
+        <h2>AWESOME Image Editor</h2>
         <div class="wrapper">
             <div class="editor-pan1">
                 <div class="filter">
@@ -61,10 +61,6 @@
             </div>
         </div>
     </div>
-
-
-
-
 
     <!-- <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script> -->
     <script src="./script.js"></script>
